--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GrowthZone.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GrowthZone.data.br",
-        frameworkUrl: buildUrl + "/GrowthZone.framework.js.br",
-        codeUrl: buildUrl + "/GrowthZone.wasm.br",
+        dataUrl: buildUrl + "/GrowthZone.data",
+        frameworkUrl: buildUrl + "/GrowthZone.framework.js",
+        codeUrl: buildUrl + "/GrowthZone.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GrowthZone",
